--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             border: 2px solid var(--button);
             padding: 10px;
             border-radius: 10px;
+            height: 100%;
         }
 
         .sec1-card:hover {
@@ -224,11 +225,11 @@
             </div>
             <div class="nav-center ">
                 <ul class="flex-center">
-                    <li><a href="#">Blogs</a></li>
-                    <li><a href="#">Terms</a></li>
-                    <li><a href="#">Policy</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <a href="#"><button class="btn">Help Desk</button></a>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="blog.html">Blogs</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                    <a href="tel:8130079566"><button class="btn">Help Desk</button></a>
                 </ul>
             </div>
             <div class="hamburger-open">
@@ -250,44 +251,32 @@
                 <h1>We don't give Service <br>We offer <span>Experience</span></h1>
                 <p class="mt-10">Welcome to <span><b>Servon</b></span>, Choose one from Below!</p>
                 <div class="sec1-cards grid-2 mt-20">
-                    <a href="#">
-                        <div class="sec1-card flex-center-center">
-                            <span><i class="fa-solid mr-10 fa-person-booth"></i></span>
-                            <p><b>All Rounder</b></p>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="sec1-card flex-center-center">
-                            <span><i class="fa-solid mr-10 fa-baby"></i></span>
-                            <p><b>Baby Caretaker</b></p>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="sec1-card flex-center-center">
-                            <span><i class="fa-solid mr-10 fa-utensils"></i></span>
-                            <p><b>Cooking Maid</b></p>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="sec1-card flex-center-center">
-                            <span><i class="fa-solid mr-10 fa-broom "></i></span>
-                            <p><b>House Maid</b></p>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="sec1-card flex-center-center">
-                            <span><i class="fa-solid mr-10 fa-hand-holding-hand "></i></span>
-                            <p><b>Elderly Care</b></p>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="sec1-card flex-center-center">
-                            <span><i class="fa-solid mr-10 fa-user-shield "></i></span>
-                            <p><b>Security Guard</b></p>
-                        </div>
-                    </a>
+                    <div class="sec1-card flex-center-center">
+                        <span><i class="fa-solid mr-10 fa-person-booth"></i></span>
+                        <p><b>All Rounder</b></p>
+                    </div>
+                    <div class="sec1-card flex-center-center">
+                        <span><i class="fa-solid mr-10 fa-baby"></i></span>
+                        <p><b>Baby Caretaker</b></p>
+                    </div>
+                    <div class="sec1-card flex-center-center">
+                        <span><i class="fa-solid mr-10 fa-utensils"></i></span>
+                        <p><b>Cooking Maid</b></p>
+                    </div>
+                    <div class="sec1-card flex-center-center">
+                        <span><i class="fa-solid mr-10 fa-broom "></i></span>
+                        <p><b>House Maid</b></p>
+                    </div>
+                    <div class="sec1-card flex-center-center">
+                        <span><i class="fa-solid mr-10 fa-hand-holding-hand "></i></span>
+                        <p><b>Elderly Care</b></p>
+                    </div>
+                    <div class="sec1-card flex-center-center">
+                        <span><i class="fa-solid mr-10 fa-user-shield "></i></span>
+                        <p><b>Security Guard</b></p>
+                    </div>
                 </div>
-                <form id="contactForm" class="contact-form flex-col reveal-anti mt-20 sec1-form">
+                <form id="contactFormHero" class="contact-form flex-col reveal-anti mt-20 sec1-form">
                     <select name="service" id="service" required>
                         <option value="All Rounder">All Rounder</option>
                         <option value="Baby Caretaker">Baby Caretaker</option>
@@ -610,21 +599,23 @@
 
     <section class="sec8">
         <div class="sec8-inner container ">
-            <form id="contactForm" class="contact-form grid-4 reveal-anti">
-                <select name="service" id="service" required>
-                    <option value="All Rounder">All Rounder</option>
-                    <option value="Baby Caretaker">Baby Caretaker</option>
-                    <option value="Cooking Maid">Cooking Maid</option>
-                    <option value="House Maid">House Maid</option>
-                    <option value="Elderly Care">Elderly Care</option>
-                    <option value="Security Guard">Security Guard</option>
-                </select>
-                <input type="text" id="name" name="name" placeholder="Your Name" required>
-                <input type="tel" id="phone" name="phone" placeholder="Mobile Number" required>
-                <button type="submit" class="btn btn-primary btn-submit">Submit</button>
-                <span class="form-message" id="formMessage"></span>
-                <span class="error-message" id="phoneError"></span>
-                <span class="error-message" id="nameError"></span>
+            <form id="contactFormFooter" class="contact-form  reveal-anti">
+                <div class="grid-4">
+                    <select name="service" id="service" required>
+                        <option value="All Rounder">All Rounder</option>
+                        <option value="Baby Caretaker">Baby Caretaker</option>
+                        <option value="Cooking Maid">Cooking Maid</option>
+                        <option value="House Maid">House Maid</option>
+                        <option value="Elderly Care">Elderly Care</option>
+                        <option value="Security Guard">Security Guard</option>
+                    </select>
+                    <input type="text" id="name" name="name" placeholder="Your Name" required>
+                    <input type="tel" id="phone" name="phone" placeholder="Mobile Number" required>
+                    <button type="submit" class="btn btn-primary btn-submit">Submit</button>
+                </div>
+                <span class="form-message center mt-20" id="formMessage"></span>
+                <span class="error-message center mt-20" id="phoneError"></span>
+                <span class="error-message center mt-20" id="nameError"></span>
             </form>
         </div>
     </section>
@@ -640,34 +631,43 @@
                     live-in maid, cleaner, babysitter, cook, nanny, governess, senior citizen caretaker, patient
                     caretaker in Delhi NCR you will find the best quality and experienced staff here for your home and
                     family</p>
+                <p class="mt-20 small"><b>Address</b> – 1st floor, Plot no. 76, Gate no. 2 , Dwarka Mor Metro Station,
+                    New
+                    Delhi –
+                    110059</p>
 
             </div>
             <div class="footer-right flex flex-3">
-                <div class="footer-r-l flex-1">
-                    <h2>Connect with us</h2>
-                    <div class="footer-left-icons mt-20">
-                        <a href="#"><span><i class="fa-brands fa-facebook fa-xl"></i></span></a>
-                        <a href="#"><span><i class="fa-brands fa-x-twitter fa-xl"></i></span></a>
-                        <a href="#"><span><i class="fa-brands fa-instagram fa-xl"></i></span></a>
-                        <a href="#"><span><i class="fa-brands fa-linkedin fa-xl"></i></span></a>
-                    </div>
-                </div>
                 <div class="footer-r-r flex-1">
                     <h2>Quick Links</h2>
-                    <a href="#">
-                        <p class="mt-20">Home</p>
+                    <a href="blog.html">
+                        <p class="mt-10">Blogs</p>
                     </a>
-                    <a href="#">
+                    <a href="about.html">
                         <p class="mt-10">About Us</p>
                     </a>
-                    <a href="#">
+                    <a href="contact.html">
                         <p class="mt-10">Contact Us</p>
                     </a>
+                    <h2 class="mt-20">Connect with us</h2>
+                    <div class="footer-left-icons mt-20">
+                        <a href="tel:8130079566"><span><i class="fa-brands fa-facebook fa-xl"></i></span></a>
+                        <a href="tel:8130079566"><span><i class="fa-brands fa-x-twitter fa-xl"></i></span></a>
+                        <a href="tel:8130079566"><span><i class="fa-brands fa-instagram fa-xl"></i></span></a>
+                        <a href="tel:8130079566"><span><i class="fa-brands fa-linkedin fa-xl"></i></span></a>
+                    </div>
                 </div>
             </div>
         </div>
         <p class="center small">Servon.in © 2026 | All rights reserved.</p>
     </footer>
+
+    <a href="tel:8130079566">
+        <div class="call-button flex-center-center">
+            <span><i class="fa-solid fa-phone-volume fa-xl fa-shake"></i></span>
+            <p>Speak to an Expert</p>
+        </div>
+    </a>
 
     <script src="assets/js/script.js"></script>
     <script src="assets/js/main.js"></script>
