--- a/index.html
+++ b/index.html
@@ -142,10 +142,20 @@
             padding-top: 40px;
         }
 
-        body {
-            background: radial-gradient(circle at 90% 90%,
-                    rgba(177, 255, 153, 0.3) 200px 200px,
-                    transparent 400px);
+        /* Section 71  */
+
+        .sec71-inner {
+            padding: 20px 100px;
+        }
+
+        .sec71-right {
+            border-radius: 30px;
+            border: 3px solid var(--button-dark);
+        }
+
+        .sec71-right iframe {
+            border-radius: 30px;
+            width: 100%;
         }
 
 
@@ -209,6 +219,11 @@
             .sec7-cards {
                 grid-template-columns: repeat(2, 1fr);
             }
+
+            .sec71-inner {
+                padding: 20px 10px;
+                text-align: center;
+            }
         }
     </style>
 </head>
@@ -225,10 +240,9 @@
             </div>
             <div class="nav-center ">
                 <ul class="flex-center">
-                    <li><a href="#">Service</a></li>
-                    <li><a href="blog.html">Blogs</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
+                    <li id="services">Services ⮟</li>
+                    <li><a href="about-us.html">About Us</a></li>
+                    <li><a href="contact-us.html">Contact Us</a></li>
                     <a href="tel:8130079566"><button class="btn">Help Desk</button></a>
                 </ul>
             </div>
@@ -238,6 +252,45 @@
             <div class="hamburger-close">
                 <i class="fa-solid fa-xmark fa-sm"></i>
             </div>
+        </div>
+        <div class="sec-services-cards">
+            <a href="all-rounder.html">
+                <div class="sec-services-card flex">
+                    <span><i class="fa-solid mr-10 fa-person-booth"></i></span>
+                    <p><b>All Rounder</b></p>
+                </div>
+            </a>
+            <a href="baby-caretaker.html">
+                <div class="sec-services-card flex">
+                    <span><i class="fa-solid mr-10 fa-baby"></i></span>
+                    <p><b>Baby Caretaker</b></p>
+                </div>
+            </a>
+            <a href="cooking-maid.html">
+                <div class="sec-services-card flex">
+                    <span><i class="fa-solid mr-10 fa-utensils"></i></span>
+                    <p><b>Cooking Maid</b></p>
+                </div>
+            </a>
+            <a href="house-maid.html">
+                <div class="sec-services-card flex">
+                    <span><i class="fa-solid mr-10 fa-broom "></i></span>
+                    <p><b>House Maid</b></p>
+                </div>
+            </a>
+            <a href="elderly-care.html">
+                <div class="sec-services-card flex">
+                    <span><i class="fa-solid mr-10 fa-hand-holding-hand "></i></span>
+                    <p><b>Elderly Care</b></p>
+                </div>
+            </a>
+            <a href="security-guard.html">
+                <div class="sec-services-card flex">
+                    <span><i class="fa-solid mr-10 fa-user-shield "></i></span>
+                    <p><b>Security Guard</b></p>
+                </div>
+            </a>
+
         </div>
     </nav>
 
@@ -597,6 +650,32 @@
         </div>
     </section>
 
+    <section class="sec71">
+        <div class="sec71-inner container flex-center">
+            <div class="sec71-left flex-1">
+                <h1><span>Contact</span></h1>
+                <a href="tel:8130079566">
+                    <h3 class="mt-20">Tel: 81300 79566</h3>
+                </a>
+                <a href="mailto:contact@servon.in">
+                    <h4>Email: contact@servon.in</h4>
+                </a>
+                <div class="mt-40">
+                    <i class="fa-brands fa-facebook fa-2xl"></i>
+                    <i class="fa-brands fa-square-instagram fa-2xl"></i>
+                    <i class="fa-brands fa-x-twitter fa-2xl"></i>
+                </div>
+                <a href="tel:8130079566"><button class="btn mt-40">Talk to Us</button></a>
+            </div>
+            <div class="sec71-right flex-2">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56037.58757635826!2d76.96122882167968!3d28.619293799999987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d05478638149f%3A0x3478a5062c930123!2sDwarka%20Mor!5e0!3m2!1sen!2sin!4v1770558757503!5m2!1sen!2sin"
+                    width="600" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </section>
+
     <section class="sec8">
         <div class="sec8-inner container ">
             <form id="contactFormFooter" class="contact-form  reveal-anti">
@@ -640,13 +719,13 @@
             <div class="footer-right flex flex-3">
                 <div class="footer-r-r flex-1">
                     <h2>Quick Links</h2>
-                    <a href="blog.html">
-                        <p class="mt-10">Blogs</p>
+                    <a href="/">
+                        <p class="mt-10">Home</p>
                     </a>
-                    <a href="about.html">
+                    <a href="about-us.html">
                         <p class="mt-10">About Us</p>
                     </a>
-                    <a href="contact.html">
+                    <a href="contact-us.html">
                         <p class="mt-10">Contact Us</p>
                     </a>
                     <h2 class="mt-20">Connect with us</h2>
